# FluxCodeBench

./: README.md  pyproject.toml
cursor-specs/: dcp-bench-v2-context-mechanisms.md
dcp_bench/: __init__.py  cli.py  evaluator.py  loader.py  metrics.py  models.py  runner.py  sandbox.py
dcp_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
flux_code_bench/: __init__.py  cli.py  evaluator.py  loader.py  metrics.py  models.py  runner.py  sandbox.py
flux_code_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tasks/task_00_filter_numbers/: evaluator.py  problem.md  task.yaml  tests.py
tasks/task_01_normalize_dict/: evaluator.py  problem.md  task.yaml  tests.py
workspace/: feedback.json  phase.json  problem.md  solution.py  task.json
