[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-code-bench"
version = "0.1.0"
description = "FluxCodeBench: Dynamic Coding Problems Benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
flux-code-bench = "flux_code_bench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flux_code_bench*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
